# kedro-dataframe-dropin

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: main.yml
ked_df/: __init__.py
kedro_dataframe_dropin/: __init__.py  core.py  dask.py  dask_rapids.py  modin.py  rapids.py
tests/: test_kedro_dataframe_dropin.py
