[tool.poetry]
name = "kedro-dataframe-dropin"
version = "0.1.0"
description = "A Kedro plugin to utilise pandas dropins (like cuDF or modin) in place of the pandas datasets"
license = "MIT"
authors = ["Zain Patel <zain.patel06@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/mzjp2/kedro-dataframe-dropin"
repository = "https://github.com/mzjp2/kedro-dataframe-dropin"
keywords = ["kedro", "rapids", "data", "gpu", "modin"]
classifiers = [
    "Framework :: Kedro"
]

[tool.poetry.dependencies]
python = ">=3.7.1, <3.9"
kedro = "^0.17.0"
pandas = "^1.2.0"

[tool.poetry.dev-dependencies]
pytest = "6.2.1"
black = "^20.8b1"
pre-commit = "^2.9.3"
isort = "^5.7.0"
pylint = "^2.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
